--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Para ti ❤️</title>
+    <title>Para alguien especial ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 id="pregunta">¿Quieres salir conmigo? ❤️</h1>
+        <div id="contenido">
+            <p class="texto-emotivo">A veces la vida te sorprende y te pone frente a alguien que te cambia los planes de un día para otro.</p>
+            <p class="texto-emotivo">Contigo todo ha sido intenso, rápido y, sobre todo, increíble.</p>
+            <p class="texto-emotivo">No necesito meses para saber que eres la persona con la que quiero estar formalmente.</p>
+            <h2 id="pregunta">Me gustas muchísimo y me encanta lo que tenemos, ¿te gustaría ser mi novia? ❤️</h2>
+        </div>
+        
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Gatito" id="gif">
+        
         <div class="botones">
             <button id="btnSi">Sí</button>
             <button id="btnNo">No</button>
