--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class="texto-emotivo">A veces la vida te sorprende y te pone frente a alguien que te cambia los planes de un día para otro.</p>
             <p class="texto-emotivo">Contigo todo ha sido intenso, rápido y, sobre todo, increíble.</p>
             <p class="texto-emotivo">No necesito meses para saber que eres la persona con la que quiero estar formalmente.</p>
-            <h2 id="pregunta">Me gustas muchísimo y me encanta lo que tenemos, ¿te gustaría ser mi novia? ❤️</h2>
+            <h2 id="pregunta">Me gustas muchísimo y me encanta lo que tenemos. Ivania, ¿te gustaría ser mi novia? ❤️</h2>
         </div>
         
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Gatito" id="gif">
