--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Para alguien especial ❤️</title>
+    <title>Para Ivania ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div id="contenido">
-            <p class="texto-emotivo">A veces la vida te sorprende y te pone frente a alguien que te cambia los planes de un día para otro.</p>
-            <p class="texto-emotivo">Contigo todo ha sido intenso, rápido y, sobre todo, increíble.</p>
-            <p class="texto-emotivo">No necesito meses para saber que eres la persona con la que quiero estar formalmente.</p>
-            <h2 id="pregunta">Me gustas muchísimo y me encanta lo que tenemos. Ivania, ¿te gustaría ser mi novia? ❤️</h2>
+            <p><strong>Ivania</strong>, he estado pensando mucho en cómo han fluido las cosas entre nosotros últimamente. Si alguien me hubiera dicho hace poco tiempo que iba a sentir esta complicidad con alguien tan rápido, probablemente no le habría creído.</p>
+            <p>Pero contigo, las reglas del tiempo parecen no aplicar. A veces pasamos meses conociendo a personas que no nos dicen nada, y de pronto llegas tú y lograste que todo se sintiera natural, como si te conociera de siempre.</p>
+            <p>Sé que todo ha sucedido a una velocidad increíble, pero no quiero pedir perdón por eso; al contrario, quiero celebrarlo. Cuando algo es tan auténtico, ¿para qué ponerle frenos?</p>
+            <p>Me encanta cómo eres, cómo me siento a tu lado y cómo hemos conectado sin forzar nada.</p>
+            <h2 id="pregunta">Ivania, estoy seguro de que quiero que seas mi novia. ¿Aceptarías formalizar este camino conmigo? ❤️</h2>
         </div>
         
         <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Gatito" id="gif">
