--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
         </div>
     </div>
     <script src="script.js"></script>
+
+    <audio id="musicaFondo" loop>
+    <source src="musica.m4a" type="audio/mp4">
+    Tu navegador no soporta el elemento de audio.
+</audio>
 </body>
 </html>
+
