--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     </div>
     <script src="script.js"></script>
 
-    <audio id="musicaFondo" loop>
+    <audio id="musicaFondo" loop preload="auto">
     <source src="musica.m4a" type="audio/mp4">
-    Tu navegador no soporta el elemento de audio.
+    <source src="musica.m4a" type="audio/x-m4a">
 </audio>
 </body>
 </html>
+
 
