--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <script src="script.js"></script>
 
     <audio id="musicaFondo" loop preload="auto">
-    <source src="musica.m4a" type="audio/mp4">
-    <source src="musica.m4a" type="audio/x-m4a">
+    <source src="videoplayback.m4a" type="audio/mp4">
+    Tu navegador no soporta el elemento de audio.
 </audio>
 </body>
 </html>
+
 
 
