Modify audio source in index.html
Updated audio source in the background music element.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
         </div>
     </div>
     <script src="script.js"></script>
-
- <audio id="musicaFondo" loop preload="auto">
-    <source src="videoplayback.m4a" type="audio/mp4">
+<audio id="musicaFondo" loop preload="auto">
+    <source src="musica.m4a" type="audio/x-m4a">
+    <source src="musica.m4a" type="audio/mp4">
+    <source src="musica.m4a" type="audio/aac">
 </audio>
+
+ 
 </body>
 </html>
+
 
 
 
